mv S101GML from libS101

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(extlibs/pugixml)
 add_subdirectory(extlibs/Clipper)
 
 add_subdirectory(libS101)
+add_subdirectory(S101GML)
 add_subdirectory(S101toGML)
