--- a/S101GML/CMakeLists.txt
+++ b/S101GML/CMakeLists.txt
@@ -1,6 +1,5 @@
-project(libS101)
+project(S101GML)
 
-# Collect libS101 sources
 file(GLOB SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 )
@@ -11,5 +10,5 @@ file(GLOB HDRS
 )
 
 add_library(${PROJECT_NAME} STATIC ${SRCS} ${HDRS})
-target_link_libraries(${PROJECT_NAME} clipper)
+target_link_libraries(${PROJECT_NAME} libS101)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
