--- a/S101toGML/CMakeLists.txt
+++ b/S101toGML/CMakeLists.txt
@@ -5,4 +5,4 @@ set(SRCS
 )
 
 add_executable(${PROJECT_NAME} ${SRCS})
-target_link_libraries(${PROJECT_NAME} libS101)
+target_link_libraries(${PROJECT_NAME} libS101 S101GML)
