remove add_library STATIC

--- a/S101GML/CMakeLists.txt
+++ b/S101GML/CMakeLists.txt
@@ -9,6 +9,6 @@ file(GLOB HDRS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 )
 
-add_library(${PROJECT_NAME} STATIC ${SRCS} ${HDRS})
+add_library(${PROJECT_NAME} ${SRCS} ${HDRS})
 target_link_libraries(${PROJECT_NAME} libS101 pugixml)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
