--- a/libS101/CMakeLists.txt
+++ b/libS101/CMakeLists.txt
@@ -10,5 +10,5 @@ file(GLOB HDRS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 )
 
-add_library(${PROJECT_NAME} STATIC ${SRCS} ${HDRS})
+add_library(${PROJECT_NAME} ${SRCS} ${HDRS})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
