new install impl. WIP

--- a/S101toGML/CMakeLists.txt
+++ b/S101toGML/CMakeLists.txt
@@ -6,3 +6,8 @@ set(SRCS
 
 add_executable(${PROJECT_NAME} ${SRCS})
 target_link_libraries(${PROJECT_NAME} libS101 S101GML)
+
+install(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+    COMPONENT ${PROJECT_NAME}
+)
