--- a/S101GML/CMakeLists.txt
+++ b/S101GML/CMakeLists.txt
@@ -4,12 +4,28 @@ file(GLOB SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 )
 
-file(GLOB HDRS
+file(GLOB S101GML_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 )
-set(S101GML_HEADERS ${HDRS} PARENT_SCOPE)
 
-add_library(${PROJECT_NAME} ${SRCS} ${S101GML_HEADERS})
+add_library(${PROJECT_NAME} ${SRCS})
 target_link_libraries(${PROJECT_NAME} libS101 pugixml)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    PUBLIC_HEADER "${S101GML_HEADERS}"
+)
+
+install(TARGETS ${PROJECT_NAME}
+    LIBRARY
+        DESTINATION lib
+    COMPONENT ${PROJECT_NAME}
+    ARCHIVE
+        DESTINATION lib
+    COMPONENT ${PROJECT_NAME}
+    PUBLIC_HEADER
+        DESTINATION include/${PROJECT_NAME}
+    COMPONENT ${PROJECT_NAME}
+)
