--- a/S101toGML/CMakeLists.txt
+++ b/S101toGML/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SRCS
     S101toGML.cpp S101toGML.h
 )
 
+set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
+
 add_executable(${PROJECT_NAME} ${SRCS})
 target_link_libraries(${PROJECT_NAME} libS101 S101GML)
 
