--- a/S101GML/CMakeLists.txt
+++ b/S101GML/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(S101GML)
 
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
 file(GLOB SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 )
@@ -21,6 +23,9 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 install(TARGETS ${PROJECT_NAME}
     LIBRARY
         DESTINATION lib
+    COMPONENT ${PROJECT_NAME}
+    RUNTIME
+        DESTINATION bin
     COMPONENT ${PROJECT_NAME}
     ARCHIVE
         DESTINATION lib
