--- a/S101toGML/CMakeLists.txt
+++ b/S101toGML/CMakeLists.txt
@@ -10,6 +10,16 @@ add_executable(${PROJECT_NAME} ${SRCS})
 target_link_libraries(${PROJECT_NAME} libS101 S101GML)
 
 install(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
+    LIBRARY
+        DESTINATION lib
+    COMPONENT ${PROJECT_NAME}
+    RUNTIME
+        DESTINATION bin
+    COMPONENT ${PROJECT_NAME}
+    ARCHIVE
+        DESTINATION lib
+    COMPONENT ${PROJECT_NAME}
+    PUBLIC_HEADER
+        DESTINATION include/${PROJECT_NAME}
     COMPONENT ${PROJECT_NAME}
 )
